# FileProc

./: CMakeLists.txt  compression.cpp  compression.h  file_proc.cpp  file_proc.h  main.cpp  test_file
Client/: CMakeLists.txt  client.cpp  client.h  main.cpp
Google_tests/: CMakeLists.txt  encript.cpp  encript_test.cpp  tests.cpp
Proxy/: CMakeLists.txt  client.cpp  main.cpp  proxy.cpp  proxy.h
Test_client/: Test_client.pro  client.cpp  client.h  get.txt  global.h  main.cpp  readme.txt  test.txt
Test_server/: Test_server.pro  global.cpp  main.cpp  server.cpp  server.h
WebSocket_Client/: CMakeLists.txt  main.cpp  websocketclient.cpp  websocketclient.h
WebSocket_Server/: CMakeLists.txt  main.cpp  websocketserver.h
proxy/: CMakeLists.txt  main.cpp  proxy.h
